--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 3.26)
-project(untitled C)
+project(KeyGenerator C)
 
 set(CMAKE_C_STANDARD 11)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libstdc++ -static-libgcc")
 
-add_executable(untitled main.c
-)
+add_executable(KeyGenerator main.c)
 
