--- a/KeyGenerationTool/KeyGenerator.cbp
+++ b/KeyGenerationTool/KeyGenerator.cbp
@@ -2,7 +2,7 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6"/>
 	<Project>
-		<Option title="untitled"/>
+		<Option title="KeyGenerator"/>
 		<Option makefile_is_custom="1"/>
 		<Option compiler="gcc"/>
 		<Option virtualFolders="CMake Files\;"/>
@@ -17,8 +17,8 @@
 					<DistClean command="C:/Users/D_GAYV~1/AppData/Local/JETBRA~1/CLION2~1.2/bin/mingw/bin/mingw32-make.exe -f &quot;C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
-			<Target title="untitled">
-				<Option output="C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/untitled.exe" prefix_auto="0" extension_auto="0"/>
+			<Target title="KeyGenerator">
+				<Option output="C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/KeyGenerator.exe" prefix_auto="0" extension_auto="0"/>
 				<Option working_dir="C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug"/>
 				<Option object_output="./"/>
 				<Option type="1"/>
@@ -30,14 +30,14 @@
 					<Add directory="C:/Users/d_gayvallet1/AppData/Local/JetBrains/CLion 2023.2.2/bin/mingw/bin/../lib/gcc/x86_64-w64-mingw32/13.1.0/../../../../x86_64-w64-mingw32/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="C:/Users/D_GAYV~1/AppData/Local/JETBRA~1/CLION2~1.2/bin/mingw/bin/mingw32-make.exe -f &quot;C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/Makefile&quot;  VERBOSE=1 untitled"/>
+					<Build command="C:/Users/D_GAYV~1/AppData/Local/JETBRA~1/CLION2~1.2/bin/mingw/bin/mingw32-make.exe -f &quot;C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/Makefile&quot;  VERBOSE=1 KeyGenerator"/>
 					<CompileFile command="C:/Users/D_GAYV~1/AppData/Local/JETBRA~1/CLION2~1.2/bin/mingw/bin/mingw32-make.exe -f &quot;C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
 					<Clean command="C:/Users/D_GAYV~1/AppData/Local/JETBRA~1/CLION2~1.2/bin/mingw/bin/mingw32-make.exe -f &quot;C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/Makefile&quot;  VERBOSE=1 clean"/>
 					<DistClean command="C:/Users/D_GAYV~1/AppData/Local/JETBRA~1/CLION2~1.2/bin/mingw/bin/mingw32-make.exe -f &quot;C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
-			<Target title="untitled/fast">
-				<Option output="C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/untitled.exe" prefix_auto="0" extension_auto="0"/>
+			<Target title="KeyGenerator/fast">
+				<Option output="C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/KeyGenerator.exe" prefix_auto="0" extension_auto="0"/>
 				<Option working_dir="C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug"/>
 				<Option object_output="./"/>
 				<Option type="1"/>
@@ -49,7 +49,7 @@
 					<Add directory="C:/Users/d_gayvallet1/AppData/Local/JetBrains/CLion 2023.2.2/bin/mingw/bin/../lib/gcc/x86_64-w64-mingw32/13.1.0/../../../../x86_64-w64-mingw32/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="C:/Users/D_GAYV~1/AppData/Local/JETBRA~1/CLION2~1.2/bin/mingw/bin/mingw32-make.exe -f &quot;C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/Makefile&quot;  VERBOSE=1 untitled/fast"/>
+					<Build command="C:/Users/D_GAYV~1/AppData/Local/JETBRA~1/CLION2~1.2/bin/mingw/bin/mingw32-make.exe -f &quot;C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/Makefile&quot;  VERBOSE=1 KeyGenerator/fast"/>
 					<CompileFile command="C:/Users/D_GAYV~1/AppData/Local/JETBRA~1/CLION2~1.2/bin/mingw/bin/mingw32-make.exe -f &quot;C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
 					<Clean command="C:/Users/D_GAYV~1/AppData/Local/JETBRA~1/CLION2~1.2/bin/mingw/bin/mingw32-make.exe -f &quot;C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/Makefile&quot;  VERBOSE=1 clean"/>
 					<DistClean command="C:/Users/D_GAYV~1/AppData/Local/JETBRA~1/CLION2~1.2/bin/mingw/bin/mingw32-make.exe -f &quot;C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/cmake-build-debug/Makefile&quot;  VERBOSE=1 clean"/>
@@ -77,7 +77,7 @@
 			</Target>
 		</Build>
 		<Unit filename="C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/main.c">
-			<Option target="untitled"/>
+			<Option target="KeyGenerator"/>
 		</Unit>
 		<Unit filename="C:/Users/d_gayvallet1/Documents/GitHub/CodeGenerator/CMakeLists.txt">
 			<Option virtualFolder="CMake Files\"/>
